Android double/triple click

Unlike most OSes Android's mouse click events don't come with the click count.
This CL keeps track of the click count for Android mouse clicks so that double
and triple clicks can work. From experimentation on Linux and online research
I found that the click count depends both on the time between the clicks and
the distance between them. Windows has a max time delay of 0.5 seconds which is
what I've used in this CL. I couldn't find a max distance value but from my
experimentation 5 DIPs seems reasonable.

BUG=666072

Review-Url: https://codereview.chromium.org/2943383002
Cr-Commit-Position: refs/heads/master@{#481405}

Former-commit-id: 30fe79726764ec6ce93001069bee890ceb529a20